small dark mode fixes; changes made directly to plugin; NOT in 2.0.3 officially

--- a/includes/css/tec_darkMode.css
+++ b/includes/css/tec_darkMode.css
@@ -289,7 +289,7 @@ a.cli_settings_button {
     color: var(--te-yellow) !important;
 }
 
-div.cli-bar-message {
+div#cookie-law-info-bar > span {
     color: white !important;
 }
 
